cppgo-keycloak-v2/cppgo/deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cpp-go-deployment-log
  labels:
    app: cpp-go-log
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cpp-go-log
  template:
    metadata:
      labels:
        app: cpp-go-log
    spec:
      containers:
      - name: cpp-go-log
        image: harbor.taas.vodafone.local/cpp-mock/cppmock-log:6988
        volumeMounts:
        - name: ca-cert-volume
          mountPath: /etc/ssl/certs
        ports:
        - containerPort: 8080
      imagePullSecrets:                                                                                                               
      - name: harborpull
      volumes:
      - name: ca-cert-volume
        configMap:
          name: ldap-cert-new
