cppgo-keycloak-v2/cppgo/deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cpp-go-log
spec:
  selector:
    app: cpp-go-log
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
